# xml-convertor

./: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
rossum/: entrypoint.py
